fixed a lot of mistakes